# entt-archers-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/components/: Battle.h  Bullet.h  CirlceCollider.h  Drawable.h  Health.h  HealthBar.h  Map.h  MoveFlip.h  MoveRotation.h  Parabolic.h  Position.h  Solid.h  Speed.h  UnitsSpawnParams.h  Velocity.h  YSort.h
src/core/: Application.cpp  Application.h  Factory.cpp  Factory.h
src/math/: MathHelper.cpp  MathHelper.h  Vector2.cpp  Vector2.h
src/systems/: AiSystem.cpp  AiSystem.h  ApplyDamage.cpp  ApplyDamage.h  CollisionResponse.cpp  CollisionResponse.h  Draw.cpp  Draw.h  MapGenrator.cpp  MapGenrator.h  Movement.cpp  Movement.h  ParabolicBulletMovement.cpp  ParabolicBulletMovement.h  UnitsSpawner.cpp  UnitsSpawner.h  UpdateHealtBar.cpp  UpdateHealtBar.h
src/utils/: ResourceManager.cpp  ResourceManager.h  support.cpp  support.h
vsproj/: vsproj.sln
vsproj/vsproj/: vsproj.vcxproj  vsproj.vcxproj.filters
